# apiario

./: .gitignore  Dockerfile  Readme.md  conexao.php  docker-compose.yaml  manage.py  pyproject.toml  setup.py  test.ipynb
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: start-app.sh
.github/workflows/: ci.yaml
.history/: Dockerfile_20240326112130  Dockerfile_20240327085056  Dockerfile_20240414111820  Dockerfile_20240414111950  Dockerfile_20240414112845  docker-compose.override_20240325115747.yaml  docker-compose_20240325105525.yaml  docker-compose_20240325105919.yaml  docker-compose_20240325115456.yaml  setup_20240323115614.py
.history/.devcontainer/: devcontainer_20240325103645.json  devcontainer_20240325104006.json  devcontainer_20240325104606.json  devcontainer_20240325104715.json  devcontainer_20240325105609.json  devcontainer_20240325105919.json  devcontainer_20240413224502.json  devcontainer_20240413224612.json  devcontainer_20240413225017.json  devcontainer_20240413231251.json  devcontainer_20240413234055.json  devcontainer_20240413234117.json  devcontainer_20240414111857.json  devcontainer_20240414113629.json  docker-compose_20240414111340.yml  docker-compose_20240414111618.yml
.history/apiario/: setup_20240323115953.py
apiario/: asgi.py  manage.py  settings.py
apiario.egg-info/: PKG-INFO  top_level.txt
apiario/apiario/: asgi.py  settings.py  urls.py  wsgi.py
apiario/usuario/: models.py
php/: conexao.php
php/apiario/: alterar-apiario.php  (+2 more)
uml/: class-diagram.wsd
webapi/: __init__.py  converter.py  entities.py
(+51 files in other folders)
