[project]
name = "app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RafaelAlvesTech", email = "rafaelpereiraalves@ufba.br"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.1.0",
    "pylint>=3.1.0",
]
