[tool.poetry]
name = "apiario"
version = "0.1.0"
description = ""
authors = ["Rafael  Alves <97904425+RafaelAlvesTech@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
